# train-ticket-system

./: .gitignore  CMakeLists.txt  Hello.txt  Hello_Branch.txt  README.md  class.hpp  classes.txt  deque.hpp  exceptions.hpp  hash_map.h  list.hpp  log.txt  main.cpp  map.hpp  memory.hpp  smart_ptr.cpp  smart_ptr.h  smart_ptr.hpp  train-ticket-system.pro  trains.csv  utility.hpp  vector.cpp  vector.h  vector.hpp  yhy.cpp  漫谈树上算法.pptx
UI/: adminadd.cpp  adminadd.h  adminadd.ui  adminadd.ui.autosave  admindelete.cpp  admindelete.h  admindelete.ui  adminlogin.cpp  adminlogin.h  adminlogin.ui  adminmainwindow.cpp  adminmainwindow.h  adminmainwindow.ui  adminregister.cpp  adminregister.h  adminregister.ui  beginwindow.cpp  beginwindow.h  beginwindow.ui  chooseseat.cpp  chooseseat.h  chooseseat.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  old.ui  search.ui  ticket3.pro  userbuy.cpp  userbuy.cpp.autosave  userbuy.h  userbuy.ui  userhistory.cpp  userhistory.h  userhistory.ui  userlogin.cpp  userlogin.h  userlogin.ui  usermainwindow.cpp  (+11 more)
build-train-ticket-system-client-Desktop_Qt_5_8_0_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_client_window.h
build-train-ticket-system-client-Desktop_Qt_5_8_0_MinGW_32bit-Debug/debug/: moc_client_window.cpp
build-train-ticket-system-server-Desktop_Qt_5_8_0_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_server_window.h
test/: binary.cpp  list.hpp  load.cpp  load.pro  main.cpp  map.hpp  memory.hpp  operation.cpp  operation.out  smart_ptr.cpp  smart_ptr.h  vector.h  车次.csv
test/build-load-Desktop_Qt_5_8_0_GCC_64bit-Debug/: Makefile  load
train-ticket-system-client/: Makefile  Makefile.Debug  Makefile.Release  client_window.ui  main.cpp  train-ticket-system-client.pro  train-ticket-system-client.pro.user.56719f3
train-ticket-system-server/: Makefile  Makefile.Debug  Makefile.Release  account_manager.cpp  account_manager.h  deque.hpp  exceptions.hpp  io_utilities.hpp  list.hpp  main.cpp  map.hpp  memory.hpp  server.cpp  server.h  server_window.ui  train-ticket-system-server.pro  train-ticket-system-server.pro.user.56719f3  train_data_manager.cpp  train_data_manager.h  train_manager.cpp  train_manager.h  utility.hpp  vector.hpp
(+15 files in other folders)
